k8s/infra/gitops/argocd/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-gateway
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server-gateway
    app.kubernetes.io/part-of: argocd
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app.kubernetes.io/name: argocd-server
